flux/bastille/apps/auth-system/zitadel/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.chancey.dev
spec:
  hostnames:
    - auth.chancey.dev
  parentRefs:
    - name: edge
      kind: Gateway
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /debug
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplaceFullPath
              replaceFullPath: /
    - backendRefs:
        - name: zitadel
          port: 8080
